allow assoication of programs to facilities